Migration de Specification e documentação
