# src/modules/cars/entities/Specification.ts
@@ -1,12 +1,19 @@
 import { v4 as uuidV4 } from "uuid"
+import { Column, CreateDateColumn, Entity, PrimaryColumn } from "typeorm"
 
+@Entity("specifications")
 class Specification {
+
+  @PrimaryColumn()
   id?: string;
 
+  @Column()
   name: string;
 
+  @Column()
   description: string;
 
+  @CreateDateColumn()
   created_at: Date;
 
   constructor() {
